Header z-index fixed

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,3 +2,11 @@
     background-color: #FFC045;
     height: 75px;
 }
+
+.navbar-collapse{
+    background-color: #FFC045;
+    border-radius: 0 0 8px 8px;
+    box-shadow: 0 5px rgba(0, 0, 0, 0.35);
+    padding: 16px;
+    z-index: 2;
+}
